--- a/BACKEND/.env_example
+++ b/BACKEND/.env_example
@@ -1,8 +1,3 @@
-
 export PORT = 5000
-
-export DATABASE_NAME = 'database.db'
-export DATABASE_PATH = '/Volumes/EXTERNOA/_study/_facultad/programacion1/Programacion/BACKEND/'
-
-export JWT_SECRET_KEY = ''
-export JWT_ACCES_TOKEN_EXPIRES = 3600
+export DATABASE_PATH = '/path/absoluto/'
+export DATABASE_nAME = 'database.db'
