--- a/BACKEND/.gitignore
+++ b/BACKEND/.gitignore
@@ -1,10 +1,8 @@
-bin
-lib
-include
-.env
+/bin
+/include
+/lib
+/lib64
+/share
 pyvenv.cfg
-install.sh
-share
-lib64
 **/__pycache__
-installOnMac.sh
+.env
