--- a/FRONTEND/src/angular.json
+++ b/FRONTEND/src/angular.json
@@ -22,10 +22,8 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+            "styles": ["node_modules/bootstrap/dist/css/bootstrap.min.css","src/styles.css"],
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
           "configurations": {
             "production": {
@@ -103,7 +101,7 @@
     }
   },
   "cli": {
-    "analytics": "e4b766d8-ac4d-4143-9978-d358912df076"
+    "analytics": false
   }
 }
 
