--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "aframe": "^1.3.0",
     "bootstrap": "^5.2.2",
+    "jwt-decode": "^3.1.2",
     "ng-particles": "^3.5.3",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.8",
